--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ tbody td {
     background: white;
     padding: 20px;
     border: 0.5px solid rgba(0, 0, 0, 0.5);
-    border-radius: 50%;
+    /* border-radius: 50%; */
 }
 
 tbody td.food {
